<resources>

    <string name="app_name">Battleships</string>
    <string name="logo">Logo</string>

    <!-- ABOUT -->
    <string name="about">About</string>
    <string name="games_name">Battleships v1.0</string>
    <string name="author">Author:</string>
    <string name="authors_name">Maciej Bassara</string>
    <string name="german_translator">German translator:</string>
    <string name="german_translators_name">Marcel Bassara</string>

    <!-- OPTIONS -->
    <string name="enable_vibra">Enable vibrations</string>
    <string name="enable_tips">Enable shooting assistance</string>

    <!-- GAME PREPARATION -->
    <string name="ok">OK</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="menu_settings">Settings</string>
    <string name="new_game">New game</string>
    <string name="options">Options</string>
    <string name="place_ships">Place ships</string>
    <string name="commit_changes">Commit changes</string>
    <string name="next">Next</string>
    <string name="random">Random</string>
    <string name="placing_ships_error">Ships are placed wrong</string>
    <string name="not_available_yet">This function is not available yet</string>
    <string name="users_name">Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_name_info">Name will be cut to first five letters</string>
    <string name="name_too_long">Name is too long! (5 max)</string>

    <!-- GAME MODE SELECTION -->
    <string name="game_mode_host">Create game</string>
    <string name="game_mode_client">Join game</string>

    <!-- MULTIPLAYER MODE SELECTION -->
    <string name="mult_mode_wifi">WiFi</string>
    <string name="mult_mode_bt">Bluetooth</string>

    <!-- WIFI ACTIVITY -->
    <string name="wifi_your_ip">Your IP:\u0009\u0009</string>
    <string name="wifi_start_server">Start server</string>
    <string name="wifi_server_ip">Server\'s IP:\u0009\u0009</string>
    <string name="wifi_connect_to_server">Connect to server</string>
    <string name="wifi_turning_on">Connecting to WiFi network…</string>
    <string name="wifi_turned_on_and_connected">Connected to: </string>
    <string name="wifi_turned_on">WiFi enabled</string>
    <string name="wifi_refresh_ip">Refresh IP</string>
    <string name="wifi_connecting">connecting…</string>

    <!-- BLUETOOTH ACTIVITY -->
    <string name="waiting_for_client">Please wait for other device to connect…</string>
    <string name="connecting_to_host">Connecting to selected device…</string>
    <string name="find_devices">Find devices</string>
    <string name="set_visivility">Set visibility of your device</string>
    <string name="bluetooth_discoverability">You have to set visibility in order to let other devices connect with you</string>
    <string name="bluetooth_help_finding_OFF">Press \"Find devices\" to scan for devices</string>
    <string name="bluetooth_help_finding_ON">Choose a device when it appears on a list below</string>
    <string name="connection_timeout">Connection timeout!</string>
    <string name="bt_not_supported">Bluetooth is not supported on your device</string>

    <!-- SHIPS -->
    <string name="aircraft_carriers">Aircraft carriers: </string>
    <string name="battleships">Battleships: </string>
    <string name="submarines">Submarines: </string>
    <string name="destroyers">Destroyers: </string>
    <string name="patrol_boats">Patrol boats: </string>

    <!-- VALUES -->
    <string name="of"> of </string>
    <string name="of1">0 of 1</string>
    <string name="of2">0 of 2</string>
    <string name="of3">0 of 3</string>
    <string name="of4">0 of 4</string>
    <string name="of5">0 of 5</string>
    <string name="aircraft_carriers_value"> of 1</string>
    <string name="battleships_value"> of 2</string>
    <string name="submarines_value"> of 3</string>
    <string name="destroyers_value"> of 4</string>
    <string name="patrol_boats_value"> of 5</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <!-- GAME -->
    <string name="score_user_name">You</string>
    <string name="score_opponent_name">User2</string>
    <string name="wait_for_opponent">Waiting for opponent…</string>
    <string name="you_start">You shoot first</string>
    <string name="opponent_starts">Your opponent shoots first</string>
    <string name="choose_field">Choose field</string>
    <string name="shoot">Shoot!</string>
    <string name="sure_wanna_quit">Are you sure you want to end this game?</string>
    <string name="result_winner">You\'ve won!!!</string>
    <string name="result_looser">You\'ve lost…</string>
    <string name="opponent_disconnected">Opponent is not connected.</string>
    <string name="exit">Exit</string>
    
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>

    <!-- MESSAGES -->
    <string name="title_activity_main_menu">Battleships</string>
    <string name="title_activity_game">Battleships</string>
    <string name="title_activity_bluetooth_host">BluetoothHostActivity</string>
    <string name="title_activity_game_mode">GameModeActivity</string>
    <string name="title_activity_game_result">GameResultActivity</string>
    <string name="title_activity_offline_game">OfflineGameActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_multiplayer_mode">MultiplayerModeActivity</string>
    <string name="title_activity_wi_fi_host">WiFiHostActivity</string>
    <string name="title_activity_wi_fi_client">WiFiClientActivity</string>

</resources>