<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background" >

    <ImageView
        android:id="@+id/logoMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo" />

    <Button
        android:id="@+id/multiplayer_button"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="wrap_content"
        android:layout_above="@+id/singleplayer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_large"
        android:onClick="multiplayer"
        android:text="@string/multiplayer" />

    <Button
        android:id="@+id/singleplayer_button"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_large"
        android:onClick="singleplayer"
        android:text="@string/singleplayer" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/singleplayer_button"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_large"
        android:onClick="options"
        android:text="@string/options" />

</RelativeLayout>
