<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_background" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_logo" />

    <Button
        android:id="@+id/WiFiModeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/mult_mode_wifi"
        android:background="@drawable/button_large"
        android:onClick="chooseMode" />

    <Button
        android:id="@+id/bluetoothModeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/WiFiModeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_large"
        android:onClick="chooseMode"
        android:text="@string/mult_mode_bt" />

</RelativeLayout>
