<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/creating_ships_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_background"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="@dimen/padding_small" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/place_ships_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="togglePlacingShipsMode"
                android:textOff="@string/place_ships"
                android:background="@drawable/button_large"
                android:textOn="@string/commit_changes" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="next"
                android:enabled="false"
                android:background="@drawable/button_large"
                android:text="@string/next" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
	